--- a/cover.css
+++ b/cover.css
@@ -17,13 +17,17 @@
  */
 
 body {
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+  /*text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);*/
+
+  background-image: url('https://images.pexels.com/photos/159832/justice-law-case-hearing-159832.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1'); /* Cambia 'ruta/a/la/imagen.jpg' a la ruta de tu imagen */
+  background-size: cover; /* Para cubrir todo el fondo */
+
 }
 
-.cover-container {
+/*.cover-container {
   max-width: 42em;
-}
+}*/
 
 
 /*
