--- a/cover.css
+++ b/cover.css
@@ -20,8 +20,10 @@ body {
   /*text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);*/
 
-  background-image: url('https://images.pexels.com/photos/159832/justice-law-case-hearing-159832.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1'); /* Cambia 'ruta/a/la/imagen.jpg' a la ruta de tu imagen */
+  background-image: url('https://cdn.pixabay.com/photo/2016/03/09/15/29/books-1246674_1280.jpg'); /* Cambia 'ruta/a/la/imagen.jpg' a la ruta de tu imagen */
   background-size: cover; /* Para cubrir todo el fondo */
+
+ 
 
 }
 
