--- a/login/sign-in.css
+++ b/login/sign-in.css
@@ -1,6 +1,9 @@
 html,
 body {
-  height: 100%;
+  /*height: 60%;*/
+  background-image: url('https://cdn.pixabay.com/photo/2021/01/21/16/49/books-5937823_1280.jpg'); /* Cambia 'ruta/a/la/imagen.jpg' a la ruta de tu imagen */
+  background-size: cover; /* Para cubrir todo el fondo */
+
 }
 
 .form-signin {
